# datacrewdelete

./: .gitignore  README.md  deletion_request.md  deletion_request_email.json  pyproject.toml  report.md
data/: domain_instructions.csv  task_tracker.json  users.csv  users.csv.backup
src/emailscrape/: crew.py  main.py  manager.py  models.py
src/emailscrape/config/: agents.yaml  tasks.yaml
src/emailscrape/templates/: email_template.py
src/emailscrape/tools/: delegate_work_tool.py  email_reader.py  email_tools.py  link_scraper.py
src/emailscrape/utils/: csv_handler.py  domain_db.py  status_tracker.py
