[project]
name = "emailscrape"
version = "0.1.0"
description = "emailscrape using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0"
]

[project.scripts]
emailscrape = "emailscrape.main:run"
run_crew = "emailscrape.main:run"
train = "emailscrape.main:train"
replay = "emailscrape.main:replay"
test = "emailscrape.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
